# brand-autopsy-db

./: .env.example  .gitignore  DESIGN.md  GENERATION_PROTOCOL.md  LEGAL_RISK_WRITING_POLICY.md  MASTERPLAN.md  PHASE0_CLOSEOUT.md  PILOT_6_BRAND_POC.md  README.md  STATUS.md  pyproject.toml  run_batch.py
.claude/: CLAUDE.md
.github/workflows/: weekly-update.yml
codex/content/: README.md
data/: .gitignore  freshness.json  quality_scores.json  sp500_list.csv
scripts/: check_progress.sh  cron_runner.py  dev.sh  run_overnight.sh  run_quality_check.py  scaffold_brand_template.py
scripts/chunks/: worker1.csv  worker2.csv  worker3.csv  worker4.csv
src/analyzer/: engine.py  generate_layer7.py  legal_validator.py  validator.py
src/api/: main.py
src/crawler/: batch_crawl.py  css_extractor.py  sec_fetcher.py  sp500_list.py
src/db/: color_utils.py  import_sp500.py  loader.py  models.py
src/pipeline/: __init__.py  design_md_enricher.py  freshness_tracker.py  quality_scorer.py
tests/: conftest.py
tests/integration/: test_brief_api.py  test_design_md_api.py
tests/unit/: test_color_extraction.py  test_design_md_enricher.py  test_engine_helpers.py  test_freshness_tracker.py  test_legal_validator.py  test_quality_scorer.py  test_sec_xbrl_year_mapping.py  test_smoke.py  test_validator.py
web/: .env.example  auth.ts  middleware.ts  package-lock.json  package.json  tailwind.config.ts
web/app/: dashboard-client.tsx  globals.css  layout.tsx  loading.tsx  page.tsx  robots.ts  sitemap.ts
web/components/: agent-prompt-card.tsx  api-key-manager.tsx  brand-brief.tsx  (+22 more)
(+4545 files in other folders)
