[project]
name = "brand-autopsy-db"
version = "0.1.0"
description = "S&P 500 Brand Autopsy Intelligence Database"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "colormath>=3.0",
    "markdown>=3.5",
    "pydantic>=2.0",
    "rich>=13.0",
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
]

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn>=0.30"]
crawl = ["scrapy>=2.11", "playwright>=1.40"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
ba-migrate = "src.db.loader:main"
ba-analyze = "src.analyzer.engine:main"
ba-report = "src.report.generator:main"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q --tb=short --strict-markers"
markers = [
    "integration: requires the full FastAPI app or filesystem fixtures",
]
